Fix Issue #2823 - Ugly scrollbars in oembed iframes and broken resizing
- Fix _resizeIframe function, shorten the timeout between calls
- Simplify the oembed iframe generation code and reduce the minimum
iframe height to 200px
- Add smooth CSS transition for iframe resizing

--- a/view/global.css
+++ b/view/global.css
@@ -115,6 +115,7 @@ span.connector {
 
 .embed_rich {
   display: block;
+  transition: height .75s;
 }
 
 /* Shared Messages */
